Fix overflow hidden state

--- a/static/global.css
+++ b/static/global.css
@@ -14,6 +14,10 @@ a {
     @apply text-primary-default;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 header {
     background-color: #eee;
     color: $primary;
